--- a/assets/confs/nowall.json
+++ b/assets/confs/nowall.json
@@ -39,6 +39,13 @@
             "color": [0, 0, 255]
         },
         {
+            "type": "Sphere",
+            "center": [1280, 500, 360],
+            "radius": 120,
+            "texture": "uv.png",
+            "bumpMap": "wood2.jpg"
+        },
+        {
             "type": "Triangle",
             "A": [640, 500, 360],
             "B": [770, 600, 360],
@@ -54,10 +61,17 @@
         },
         {
             "type": "Parallelogram",
-            "A": [-1280, 0, 0],
-            "B": [2560, 0, 0],
-            "C": [-1280, 2000, 0],
-            "color": [0, 255, 255]
+            "A": [-2560, -1000, 0],
+            "B": [3840, -1000, 0],
+            "C": [-2560, 1500, 0],
+            "texture": "uv.png"
+        },
+        {
+            "type": "Parallelogram",
+            "A": [-2560, 1500, 0],
+            "B": [3840, 1500, 0],
+            "C": [-2560, 1500, 7680],
+            "texture": "uv.png"
         }
     ]
 }
